k8s/DB-VM.yaml
kind: Service
apiVersion: v1
metadata:
  name: pg-service
spec:
  type: NodePort
  selector:
    kubevirt.io/domain: pg-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
