k8s/UI.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sccstore-ui-route
spec:
  port:
    targetPort: 8443
  tls:
    termination: passthrough 
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  to:
    kind: Service
    name: sccstore-ui-service
    weight: 100

---

apiVersion: v1
kind: Service
metadata:
  name: sccstore-ui-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: sccstore-ui
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sccstore-ui
  labels:
    app: sccstore-ui
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/part-of: sccstore
    app.openshift.io/runtime: spring-boot
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sccstore-ui
  template:
    metadata:
      labels:
        app: sccstore-ui
    spec:
      containers:
      - name: sccstore-ui
        image: 'registry-1.docker.io/rhworkshops/sccstore-ui:latest'
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: "/certs/"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8778
            scheme: HTTPS
          timeoutSeconds: 4
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8778
              scheme: HTTPS
            timeoutSeconds: 4
            initialDelaySeconds: 30
            periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "300Mi"
            cpu: "1500m"
      volumes:
      - name: certs
        secret:
          secretName: sccstore-webcert
      serviceAccountName: default
